--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <main>
-        <h1 class="text-center">Bienvenido al Kiosquito Javascript</h1>ff
+        <h1 class="text-center">Bienvenido al Kiosquito Javascript</h1>
         <div class="contenedor">
             <button onclick="nuevaCompra()" class="btn btn-success"><i class="fa-regular fa-cart-shopping"></i> ¿Realizar una compra?</button>
         </div>
