Acomodando Botones, agregado de Lista Gastos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
 
 <body>
     <main>
-        <h1 class="text-center">Bienvenido al Kiosquito Javascript</h1>
-        <div class="contenedor">
-            <button onclick="nuevaCompra()" class="btn btn-success"><i class="fa-regular fa-cart-shopping"></i> ¿Realizar una compra?</button>
+        <h1 class="text-center">Curso Javascript - Gustavo Lozano</h1>
+        <div class="contenedor row">
+            <div>
+                <button onclick="compra_maquinaExpendedora()" class="btn btn-success"><i
+                        class="fa-regular fa-cart-shopping"></i> Realizar compra en Maquina Expendedora</button>
+            </div>
+            <div>
+                <button onclick="gastos_mensuales()" class="btn btn-success"><i class="fa-regular fa-note"></i> Agregar
+                    Servicios o Gastos Mensuales</button>
+            </div>
         </div>
     </main>
     <!-- Scripts -->
