Agregando estilo a la pagina y las nuevas funciones

--- a/index.html
+++ b/index.html
@@ -18,20 +18,41 @@
 <body>
     <main>
         <h1 class="text-center">Curso Javascript - Gustavo Lozano</h1>
-        <div class="contenedor row">
-            <div>
-                <button onclick="compra_maquinaExpendedora()" class="btn btn-success"><i
-                        class="fa-regular fa-cart-shopping"></i> Realizar compra en Maquina Expendedora</button>
-            </div>
-            <div>
-                <button onclick="gastos_mensuales()" class="btn btn-success"><i class="fa-regular fa-note"></i> Agregar
-                    Servicios o Gastos Mensuales</button>
-            </div>
+        <div class="row justify-content-center">
+            <section class="col-5">
+                <div class="contenedor row">
+                    <h2>Primer Pre-Entrega</h2>
+                    <div>
+                        <button onclick="compra_maquinaExpendedora()" class="btn btn-success"><i
+                                class="fa-regular fa-cart-shopping"></i> Realizar compra en Maquina Expendedora</button>
+                    </div>
+                    <div>
+                        <button onclick="gastos_mensuales()" class="btn btn-success"><i class="fa-regular fa-note"></i>
+                            Agregar
+                            Servicios o Gastos Mensuales</button>
+                    </div>
+                </div>
+            </section>
+            <section class="col-5">
+                <div class="contenedor row">
+                    <h2>Segunda Pre-Entrega</h2>
+                    <div>
+                        <button onclick="comprarLibros()" class="btn btn-success"><i class="fa-light fa-books fa-lg"></i>
+                            Comprar Novelas y Libros varios</button>
+                    </div>
+                    <!-- <div>
+                        <button onclick="gastos_mensuales()" class="btn btn-success"><i class="fa-regular fa-note"></i>
+                            Agregar
+                            Servicios o Gastos Mensuales</button>
+                    </div> -->
+                </div>
+            </section>
         </div>
     </main>
     <!-- Scripts -->
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/funciones.js"></script>
+    <script src="assets/js/funciones1erPreEntrega.js"></script>
+    <script src="assets/js/funciones2daPreEntrega.js"></script>
 </body>
 
 </html>
