--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <main>
-        <h1 class="text-center">Curso Javascript - Gustavo Lozano</h1>
+        <h1 class="text-center h1title"><a href="index.html">Curso Javascript - Gustavo Lozano</a></h1>
         <div class="row justify-content-center">
-            <section class="col-5">
+            <section class="col-5 section">
                 <div class="contenedor row">
                     <h2>Primer Pre-Entrega</h2>
                     <div>
@@ -28,31 +28,35 @@
                     </div>
                     <div>
                         <button onclick="gastos_mensuales()" class="btn btn-success"><i class="fa-regular fa-note"></i>
-                            Agregar
-                            Servicios o Gastos Mensuales</button>
+                            Agregar Servicios o Gastos Mensuales</button>
                     </div>
                 </div>
             </section>
-            <section class="col-5">
+            <section class="col-5 section">
                 <div class="contenedor row">
                     <h2>Segunda Pre-Entrega</h2>
                     <div>
-                        <button onclick="comprarLibros()" class="btn btn-success"><i class="fa-light fa-books fa-lg"></i>
+                        <button onclick="comprarLibros()" class="btn btn-success"><i
+                                class="fa-light fa-books fa-lg"></i>
                             Comprar Novelas y Libros varios</button>
                     </div>
-                    <!-- <div>
-                        <button onclick="gastos_mensuales()" class="btn btn-success"><i class="fa-regular fa-note"></i>
-                            Agregar
-                            Servicios o Gastos Mensuales</button>
-                    </div> -->
+                </div>
+            </section>
+            <section class="col-5 section">
+                <div class="contenedor row">
+                    <h2>Tercer Pre-Entrega</h2>
+                    <div>
+                        <a href="eCommerce.html" class="btn btn-success"><i
+                            class="fa-regular fa-lg fa-cart-shopping"></i>
+                            Ir al Mini E-commerce</a>
+                    </div>
                 </div>
             </section>
         </div>
     </main>
     <!-- Scripts -->
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/funciones1erPreEntrega.js"></script>
-    <script src="assets/js/funciones2daPreEntrega.js"></script>
+    <script src="assets/js/funciones.js"></script>
 </body>
 
 </html>
