Agregando Precio Unitario y Total en Carrito

--- a/eCommerce.html
+++ b/eCommerce.html
@@ -20,7 +20,7 @@
         <h1 class="text-center h1title"><a href="index.html">Curso Javascript - Gustavo Lozano</a></h1>
         <h2 class="pCarrito">Bulones - EL PITUTO</h2>
         <div class="container-xl d-flex justify-content-end">
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modal">
+            <button type="button" id="btn_precio_total" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modal">
                 <i class="fa-light fa-cart-shopping"></i>&nbsp;&nbsp;Tu Pedido
             </button>
         </div>
