--- a/eCommerce.html
+++ b/eCommerce.html
@@ -64,12 +64,12 @@
                 <div class="text-center" id="precio_total">
 
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger justify-self-start" id="vaciarCarrito"><i
+                <div class="modal-footer justify-content-evenly">
+                    <button type="button" class="btn btn-danger" id="vaciarCarrito"><i
                             class="fa-solid fa-trash-can-list"></i> Vaciar Carrito</button>
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal"><i
                             class="fa-light fa-cart-shopping"></i> Seguir Comprando</button>
-                    <button type="button" class="btn btn-success"><i class="fa-sharp fa-regular fa-cash-register"></i>
+                    <button type="button" class="btn btn-success" id="pagar"><i class="fa-sharp fa-regular fa-cash-register"></i>
                         Ir al pago</button>
                 </div>
             </div>
@@ -77,6 +77,7 @@
     </div>
     <!-- Scripts -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/sweetalert.min.js"></script>
     <script src="assets/js/funciones.js"></script>
 </body>
 
