--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </main>
     <!-- Scripts -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/sweetalert.min.js"></script>
     <script src="assets/js/funciones.js"></script>
 </body>
 
